--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./images/min-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exellance Info</title>
+    <meta name="google-site-verification" content="J7A01QI-1k-t2iBSyqRNetQtpprdslIZJwKP9WJgGzI" />
+    <title>Excellance Informatique</title>
   </head>
   <body>
     <div id="root"></div>
